--- a/resources/sass/components/_input.scss
+++ b/resources/sass/components/_input.scss
@@ -10,8 +10,9 @@
 
     align-items: center;
 
+    background: var(--clr-neutral-200);
+
     border-radius: var(--size-500);
-    border: 1px solid var(--input-color);
 
     padding-block: var(--size-300);
     padding-inline: var(--size-500);
@@ -26,7 +27,7 @@
         border: none;
 
         color: var(--clr-neutral-900);
-
+        background: none;
 
         font-weight: var(--fw-medium);
         font-size: var(--fs-400);
@@ -77,7 +78,7 @@
             height: var(--size-600);
 
             border-radius: var(--size-500);
-            outline: 1px solid var(--input-color);
+            background: var(--clr-neutral-200);
         }
     }
 
@@ -136,8 +137,9 @@
 
         border-radius: var(--size-500);
 
-        background: transparent;
-        border: 1px solid var(--input-color);
+        background: var(--clr-neutral-200);
+        // border: 1px solid var(--input-color);
+        border: none;
 
         outline: none;
 
@@ -176,8 +178,9 @@
         padding: var(--size-300);
         border-radius: var(--size-500);
 
-        background: var(--clr-neutral-100);
-        border: 1px solid var(--input-color);
+        background: var(--clr-neutral-200);
+        // border: 1px solid var(--input-color);
+        border: none;
 
         .dropdown-list {
 
@@ -205,20 +208,29 @@
 
                 &:hover,
                 &:focus {
-                    background: var(--clr-neutral-200);
+                    background: var(--clr-neutral-100);
                 }
 
             }
+
+            &::-webkit-scrollbar-track {
+                border-radius: var(--size-800);
+                background: var(--clr-neutral-200);
+            }
+            
+            &::-webkit-scrollbar {
+                width: var(--size-300);
+                border-radius: 100vw;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: var(--clr-primary-500);
+                border-radius: var(--size-500);
+                border: 2px solid var(--clr-neutral-200);
+            }
         }
 
-        &::-webkit-scrollbar-track {
-            border-radius: var(--size-800);
-        }
-
-        &::-webkit-scrollbar {
-            width: 1rem;
-            border-radius: 100vw;
-        }
+        
 
     }
 
