--- a/resources/sass/components/_bodyShapes.scss
+++ b/resources/sass/components/_bodyShapes.scss
@@ -1,6 +1,6 @@
 body {
     
-    background: var(--clr-neutral-200) url(../assets/bg-shapes.svg);
+    background: var(--clr-neutral-100);
 
     background-position: bottom;
     background-repeat: no-repeat;
