Basic comments loader

--- a/resources/sass/abstracts/_colors.scss
+++ b/resources/sass/abstracts/_colors.scss
@@ -19,6 +19,7 @@ $colors: (
 
     'other': (
         'box-shadow': hsla(0, 0%, 20%, 0.15),
+        'modal-backdrop': hsla(0, 0%, 20%, 0.8),
         'active': hsl(123, 85%, 50%),
         'error': hsl(0, 73%, 66%)
     )
