--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -11,6 +11,7 @@
 
 
 @use '../sass/components/button';
+@use '../sass/components/modal';
 @use '../sass/components/shadow';
 @use '../sass/components/post';
 @use '../sass/components/link';
